objects/ERP_Reference_Data__c.object
<CustomObject>
    <fields>
        <fullName>Technical_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - Technical Promoter</description>
        <inlineHelpText>ABB employee in charge to provide technical support to   consultants at an early stage in order to have ABB offering specified into their projects, building a competitive advantage. This information is local country specific.</inlineHelpText>
        <label>Technical Promoter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LSO_Reference_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - Technical support</description>
        <inlineHelpText>ABB employee in charge to provide technical support to the customer. This information is local country specific.</inlineHelpText>
        <label>Technical Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LSO_Reference_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_be_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R7B : Used in Buying_Account_by_BU batch. This field will be marked as checked only either it is a new LRD or for an existing LRD Country, Recordtype, Block, LBU fields are changed.</description>
        <label>To  be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Sales_Resources_Text__c</fullName>
        <description>R3 Type of Sales Resources</description>
        <label>Type of Sales Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Salesresources__c</fullName>
        <description>R3 - Type of Salesforce</description>
        <inlineHelpText>Type of ABB sales resources accountable to support this customer. This information is local country specific.</inlineHelpText>
        <label>Type of Sales Resources</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>1 - Canale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Agenzia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z - Not Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_LSO_Reference_Data_for_Accounts__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of LSO Reference Data for Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Local Reference Data</label>
    <listViews>
        <fullName>filtered_deployment</fullName>
        <columns>NAME</columns>
        <columns>ERP_ID__c</columns>
        <columns>SAP_Distribution_Channel__c</columns>
        <columns>SAP_Division__c</columns>
        <columns>SAP_Sales_Organization__c</columns>
        <columns>Account_GUID__c</columns>
        <columns>ManualUniqueKey__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>&quot;Korea, Democratic People&apos;s Republic of&quot;,&quot;Korea, Republic of&quot;</value>
        </filters>
        <label>filtered_deployment</label>
        <language>en_US</language>
        <sharedTo>
            <role>ABB_CRM_SystemAdmin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ERP-REF-DATA-{0000}</displayFormat>
        <label>LSO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Reference Data</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>R3v1 - Default record type for LSO Reference data.</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Non_Buying_Account_LSO_Reference_Data</fullName>
        <active>true</active>
        <description>R3v1 - External Non-Buying Account LSO Reference Data record type will be allowed for the user to create new record for the non-buying account.</description>
        <label>Local Ref Data Manual Entry</label>
    </recordTypes>
    <recordTypes>
        <fullName>GIS_Approved_LSO_Reference_Data</fullName>
        <active>true</active>
        <description>R3v1 - GIS Approved LSO Reference Data Record Type this will not be available for the user to create any new LSO Specific reference data.</description>
        <label>Local Ref Data ERP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>